--- a/index.jade
+++ b/index.jade
@@ -11,139 +11,12 @@ html
     .header
       .container
         h1 Geeky Shirt February
-        h2 A different geeky shirt every day in February
+        h2 A different geeky shirt every day
     .container
+      - var shirts = [{"title":"Node.js Turtle","image":"http://mmt.asciidisco.com/img/node_turtle.png","link":"http://teespring.com/nodejs"},{"title":"Helvetica","image":"http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg","link":"http://www.bustedtees.com/helvetica"},{"title":"Binary Dad ","image":"http://a.tgcdn.net/images/products/frontsquare/dad.jpg","link":"http://www.bustedtees.com/helvetica"},{"title":"Green Linen Shirt ","image":"http://www.jinx.com/content/prod/791p_19c_2m.jpg","link":"http://www.jinx.com/p/world_of_warcraft_green_linen_shirt_t_shirt.html"},{"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5"},{"title":"Aperture 40s","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c3_aperture_1940.jpg","link":"http://www.thinkgeek.com/product/e8c3/"},{"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/"},{"title":"Bazinga","image":"http://a.tgcdn.net/images/products/additional/carousel/e5a4_bazinga_hoodie.jpg","link":"http://www.thinkgeek.com/product/d18d/"},{"title":"Hearthstone","image":"http://www.jinx.com/content/prod/846p_0c_1b.jpg","link":"http://www.jinx.com/p/world_of_warcraft_home_is_where_the_hearthstone_is_t_shirt.html"},{"title":"HJKL","image":"http://teespring.com/uploads/2175/shirtFront.jpg","link":"http://teespring.com/hjkl"},{"title":"Triforce","image":"http://ak1.polyvoreimg.com/cgi/img-thing/size/l/tid/61371335.jpg","link":"http://www.polyvore.com/nintendo_legend_zelda_ocarina_time/thing?id=61371335"},{"title":"Serif","image":"http://typographyshop.com/images/serifm_main.jpg","link":"http://typographyshop.com/serif_mens-t-shirt.html"},{"title":"Sans Serif","image":"http://typographyshop.com/images/sans_men_lgdet.jpg","link":"http://typographyshop.com/sans-serif-mens-t-shirt.html"},{"title":"George Lois","image":"http://typographyshop.com/images/george_lois_the_creative_act_men_20.jpg","link":"http://typographyshop.com/george_lois_creative_act_mens_t-shirt.html"},{"title":"Black Mesa","image":"http://www.jinx.com/content/prod/3160p_0c_1b.jpg","link":"http://www.jinx.com/p/half_life_2_black_mesa_premium_tee.html"},{"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html"},{"title":"Node.js Logo","image":"http://ih3.redbubble.net/image.10435364.0663/fc,550x550,army.jpg","link":"http://www.redbubble.com/people/dmitrybaranovsk/works/7590663-node-js"},{"title":"Slide to Unlock","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/g2crpas9e6vg.png","link":"https://www.lolshirts.com/shirt/800f3668e8c/slide-to-unlock-t-shirt"},{"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/"},{"title":"Esc","image":"http://a.tgcdn.net/images/products/zoom/esc.jpg","link":"http://www.thinkgeek.com/product/5cc0/"},{"title":"RPSLS","image":"http://a.tgcdn.net/images/products/additional/carousel/db2e_lizard_spock.jpg","link":"http://www.thinkgeek.com/product/b597/"},{"title":"Linux Cheat Shirt","image":"http://a.tgcdn.net/images/products/zoom/dabb_linux_cheat.jpg","link":"http://www.thinkgeek.com/product/dabb/"},{"title":"A Book Apart","image":"http://cdn.shopify.com/s/files/1/0118/1012/products/abookapart-front_2048x2048.jpeg?835","link":"http://www.unitedpixelworkers.com/products/a-book-apart"},{"title":"Exploded 4S","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/"},{"title":"Binford","image":"http://6.media.bustedtees.cvcdn.com/5/-/bustedtees.481a1bf5-7fb8-467d-91ae-f1e2d913.gif","link":"http://www.bustedtees.com/binfordtools"},{"title":"Elements","image":"http://6.media.bustedtees.cvcdn.com/2/-/bustedtees.faedf7f2-2f00-4c84-ae9a-0e4963b4.gif","link":"http://www.bustedtees.com/elements"},{"title":"The Oneders","image":"http://9.media.bustedtees.cvcdn.com/f/-/bustedtees.1977a84f-eae9-4514-892f-d761cc97.gif","link":"http://www.bustedtees.com/theoneders"},{"title":"BSOD","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/zmjwb8ve34qx.png","link":"https://www.lolshirts.com/shirt/f0ab97a7b83/blue-screen-of-death-t-shirt"}]
       ol.calendar
-        li
-          a(href='http://teespring.com/nodejs')
-            img(src='http://mmt.asciidisco.com/img/node_turtle.png')
-            span Node.js Turtle
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Helvetica
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Binary Dad 
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Green Linen Shirt 
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span HTML5 Dev Conf
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Aperture 40s
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Planet Express
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Bazinga
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Hearthstone
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span HJKL
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Triforce
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Serif
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Sans Serif
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span George Lois
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Black Mesa
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Aperture 80s
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Node.js Logo
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Slide to Unlock
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Community 8-Bit
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Esc
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span RPSLS
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Linux Cheat Shirt
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span A Book Apart
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Exploded 4S
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Binford
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span Elements
-
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span The Oneders
-        li
-          a(href='http://www.bustedtees.com/helvetica')
-            img(src='http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg')
-            span BSOD
-
-
+        each shirt in shirts
+          li
+            a(href='#{shirt.link}')
+              img(src='#{shirt.image}')
+              span #{shirt.title}
