--- a/css/index.styl
+++ b/css/index.styl
@@ -1,8 +1,8 @@
 @import 'reset'
 @import 'clearfix'
 
-$have-border = #567
-$have-background = #abc
+$have-border = #676
+$have-background = #7a7
 $have-day = #dde7ee
 $need-border = #aaa
 $need-background = #d6d6d6
