Added ASCII Art header to .jade file.

--- a/css/index.css
+++ b/css/index.css
@@ -118,10 +118,48 @@ body {
   padding-top: 12px;
   float: left;
 }
+.header .logo {
+  display: none;
+  float: right;
+  opacity: 0.7;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ie-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.header .logo:hover {
+  opacity: 1;
+}
 .container {
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
+  zoom: 1;
+}
+.container:before,
+.container:after {
+  content: "";
+  display: table;
+}
+.container:after {
+  clear: both;
+}
+.footer {
+  clear: both;
+  text-align: center;
+  padding-top: 10px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #eee;
+}
+.footer a {
+  background: #fff;
+  font-size: 28px;
+  color: #aaa;
+  padding: 0 10px;
+  text-decoration: none;
+  position: relative;
+  top: 15px;
 }
 .calendar {
   counter-reset: li;
@@ -205,14 +243,17 @@ body {
   }
 }
 @media (min-width: 700px) {
+  .header .logo {
+    display: block;
+  }
   .calendar li {
-    width: 14%;
+    width: 14.28571428571429%;
   }
   .calendar li a {
     padding-top: 5%;
     padding-bottom: 5%;
   }
   .calendar li:first-child {
-    margin-left: 70%;
+    margin-left: 71.42857142857144%;
   }
 }
