--- a/index.jade
+++ b/index.jade
@@ -1,4 +1,14 @@
 doctype 5
+//-     ,ad8888ba,                           88                      ad88888ba   88           88                       
+//-    d8"'    `"8b                          88                     d8"     "8b  88           ""                ,d     
+//-   d8'                                    88                     Y8,          88                             88     
+//-   88              ,adPPYba,   ,adPPYba,  88   ,d8  8b       d8  `Y8aaaaa,    88,dPPYba,   88  8b,dPPYba,  MM88MMM  
+//-   88      88888  a8P_____88  a8P_____88  88 ,a8"   `8b     d8'    `"""""8b,  88P'    "8a  88  88P'   "Y8    88     
+//-   Y8,        88  8PP"""""""  8PP"""""""  8888[      `8b   d8'           `8b  88       88  88  88            88     
+//-    Y8a.    .a88  "8b,   ,aa  "8b,   ,aa  88`"Yba,    `8b,d8'    Y8a     a8P  88       88  88  88            88,    
+//-     `"Y88888P"    `"Ybbd8"'   `"Ybbd8"'  88   `Y8a     Y88'      "Y88888P"   88       88  88  88            "Y888  
+//-                                                        d8'                                                         
+//-                                                       d8'                                                          
 html
   head
     title Geeky Shirt February
@@ -13,6 +23,8 @@ html
       .container
         h1 Geeky Shirt February
         h2 A different geeky shirt every day
+        a(href='http://peterwooley.com')
+          img.logo(src='images/wooooooooley.png')
     .container
       - var shirts = []
       - shirts.push({"title":"Node.js Turtle","image":"http://mmt.asciidisco.com/img/node_turtle.png","link":"http://teespring.com/nodejs"})
@@ -34,11 +46,11 @@ html
       - shirts.push({"title":"Linux Cheat Shirt","image":"http://a.tgcdn.net/images/products/zoom/dabb_linux_cheat.jpg","link":"http://www.thinkgeek.com/product/dabb/"})
       - shirts.push({"title":"Zelda is the Girl","image":"http://5.media.bustedtees.cvcdn.com/7/-/bustedtees.5444a467-03ff-48c2-b752-41b9dab3.gif","link":"http://www.bustedtees.com/zeldaisthegirl"})
       - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
+      - shirts.push({"title":"Personal Soundtrack","image":"http://a.tgcdn.net/images/products/zoom/0a5b_personal_soundtrack_shirt.jpg","link":"http://www.thinkgeek.com/product/a5bf/"})
       - shirts.push({"title":"Compiling","image":"http://cdn.shopify.com/s/files/1/0149/3544/products/compiling_shirt_4_1024x1024.jpg?9081","link":"http://store.xkcd.com/products/compiling", "need":true})
       - shirts.push({"title":"Serif","image":"http://typographyshop.com/images/serifm_main.jpg","link":"http://typographyshop.com/serif_mens-t-shirt.html", "need":true})
       - shirts.push({"title":"Sans Serif","image":"http://typographyshop.com/images/sans_men_lgdet.jpg","link":"http://typographyshop.com/sans-serif-mens-t-shirt.html", "need":true})
       - shirts.push({"title":"Slide to Unlock","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/g2crpas9e6vg.png","link":"https://www.lolshirts.com/shirt/800f3668e8c/slide-to-unlock-t-shirt", "need":true})
-      - shirts.push({"title":"Esc","image":"http://a.tgcdn.net/images/products/zoom/esc.jpg","link":"http://www.thinkgeek.com/product/5cc0/", "need":true})
       - shirts.push({"title":"A Book Apart","image":"http://cdn.shopify.com/s/files/1/0118/1012/products/abookapart-front_2048x2048.jpeg?835","link":"http://www.unitedpixelworkers.com/products/a-book-apart", "need":true})
       - shirts.push({"title":"Exploded 4S","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/", "need":true})
       - shirts.push({"title":"Binford","image":"http://6.media.bustedtees.cvcdn.com/5/-/bustedtees.481a1bf5-7fb8-467d-91ae-f1e2d913.gif","link":"http://www.bustedtees.com/binfordtools", "need":true})
@@ -49,3 +61,5 @@ html
           li(class='#{need}')
             a(href='#{shirt.link}', style='background-image:url(#{shirt.image})')
               span #{shirt.title}
+      .footer
+        a(href='http://peterwooley.com') &infin;
