--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,7 @@ body {
   counter-reset: li;
 }
 .calendar li {
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 5px;
   font-size: 14px;
