--- a/css/index.styl
+++ b/css/index.styl
@@ -71,6 +71,7 @@ body
   counter-reset: li
 
   li
+    -moz-box-sizing: border-box
     box-sizing: border-box
     padding: 5px
     font-size: 14px
