--- a/css/index.css
+++ b/css/index.css
@@ -198,6 +198,7 @@ body {
 .calendar li span {
   background: #7a7;
   border-top: 1px solid rgba(255,255,255,0.4);
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: absolute;
   bottom: 0;
