--- a/css/index.styl
+++ b/css/index.styl
@@ -104,6 +104,7 @@ body
     span
       background: $have-background
       border-top:1px solid rgba(255,255,255,.4)
+      -moz-box-sizing: border-box
       box-sizing: border-box
       position: absolute
       bottom: 0
