--- a/index.jade
+++ b/index.jade
@@ -47,14 +47,14 @@ html
       - shirts.push({"title":"Zelda is the Girl","image":"http://5.media.bustedtees.cvcdn.com/7/-/bustedtees.5444a467-03ff-48c2-b752-41b9dab3.gif","link":"http://www.bustedtees.com/zeldaisthegirl"})
       - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
       - shirts.push({"title":"Personal Soundtrack","image":"http://a.tgcdn.net/images/products/zoom/0a5b_personal_soundtrack_shirt.jpg","link":"http://www.thinkgeek.com/product/a5bf/"})
-      - shirts.push({"title":"Compiling","image":"http://cdn.shopify.com/s/files/1/0149/3544/products/compiling_shirt_4_1024x1024.jpg?9081","link":"http://store.xkcd.com/products/compiling", "need":true})
+      - shirts.push({"title":"Compiling","image":"http://cdn.shopify.com/s/files/1/0149/3544/products/compiling_shirt_4_1024x1024.jpg?9081","link":"http://store.xkcd.com/products/compiling"})
+      - shirts.push({"title":"Slide to Unlock","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/g2crpas9e6vg.png","link":"https://www.lolshirts.com/shirt/800f3668e8c/slide-to-unlock-t-shirt"})
+      - shirts.push({"title":"Exploded 4S","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/"})
+      - shirts.push({"title":"Turret Schematic","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c5_aperture_turret.jpg","link":"http://www.thinkgeek.com/product/e8c5/"})
       - shirts.push({"title":"Serif","image":"http://typographyshop.com/images/serifm_main.jpg","link":"http://typographyshop.com/serif_mens-t-shirt.html", "need":true})
       - shirts.push({"title":"Sans Serif","image":"http://typographyshop.com/images/sans_men_lgdet.jpg","link":"http://typographyshop.com/sans-serif-mens-t-shirt.html", "need":true})
-      - shirts.push({"title":"Slide to Unlock","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/g2crpas9e6vg.png","link":"https://www.lolshirts.com/shirt/800f3668e8c/slide-to-unlock-t-shirt", "need":true})
       - shirts.push({"title":"A Book Apart","image":"http://cdn.shopify.com/s/files/1/0118/1012/products/abookapart-front_2048x2048.jpeg?835","link":"http://www.unitedpixelworkers.com/products/a-book-apart", "need":true})
-      - shirts.push({"title":"Exploded 4S","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/", "need":true})
-      - shirts.push({"title":"Binford","image":"http://6.media.bustedtees.cvcdn.com/5/-/bustedtees.481a1bf5-7fb8-467d-91ae-f1e2d913.gif","link":"http://www.bustedtees.com/binfordtools", "need":true})
-      - shirts.push({"title":"BSOD","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/zmjwb8ve34qx.png","link":"https://www.lolshirts.com/shirt/f0ab97a7b83/blue-screen-of-death-t-shirt", "need":true})
+      - shirts.push({"title":"BSOD","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/zmjwb8ve34qx.png","link":"https://www.lolshirts.com/shirt/f0ab97a7b83/blue-screen-of-death-t-shirt"})
       ol.calendar
         each shirt in shirts
           - var need = shirt.need ? "need" : ""
