--- a/css/index.styl
+++ b/css/index.styl
@@ -90,6 +90,17 @@ body
       height: 120px
       overflow: hidden
 
+    &.past
+      opacity:.5
+
+    &.current a
+      height:112px
+      border: #215E8F solid 5px;
+      border-radius:9px
+
+    &.current:before
+      border-top-right-radius:8px
+
     &.need a
       border-color: $need-border
 
