--- a/index.jade
+++ b/index.jade
@@ -33,6 +33,7 @@ html
       - shirts.push({"title":"Green Linen Shirt ","image":"http://www.jinx.com/content/prod/791p_19c_1b.jpg","link":"http://www.jinx.com/p/world_of_warcraft_green_linen_shirt_t_shirt.html"})
       - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5"})
       - shirts.push({"title":"Aperture 40s","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c3_aperture_1940.jpg","link":"http://www.thinkgeek.com/product/e8c3/"})
+      - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/"})
       - shirts.push({"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/"})
       - shirts.push({"title":"Bazinga","image":"http://a.tgcdn.net/images/products/additional/carousel/e5a4_bazinga_hoodie.jpg","link":"http://www.thinkgeek.com/product/d18d/"})
       - shirts.push({"title":"Hearthstone","image":"http://www.jinx.com/content/prod/846p_0c_1b.jpg","link":"http://www.jinx.com/p/world_of_warcraft_home_is_where_the_hearthstone_is_t_shirt.html"})
@@ -41,7 +42,6 @@ html
       - shirts.push({"title":"Black Mesa","image":"http://www.jinx.com/content/prod/3160p_0c_1b.jpg","link":"http://www.jinx.com/p/half_life_2_black_mesa_premium_tee.html"})
       - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html"})
       - shirts.push({"title":"Node.js Logo","image":"http://ih3.redbubble.net/image.10435364.0663/fc,550x550,army.jpg","link":"http://www.redbubble.com/people/dmitrybaranovsk/works/7590663-node-js"})
-      - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/"})
       - shirts.push({"title":"RPSLS","image":"http://a.tgcdn.net/images/products/additional/carousel/db2e_lizard_spock.jpg","link":"http://www.thinkgeek.com/product/b597/"})
       - shirts.push({"title":"Linux Cheat Shirt","image":"http://a.tgcdn.net/images/products/zoom/dabb_linux_cheat.jpg","link":"http://www.thinkgeek.com/product/dabb/"})
       - shirts.push({"title":"Zelda is the Girl","image":"http://5.media.bustedtees.cvcdn.com/7/-/bustedtees.5444a467-03ff-48c2-b752-41b9dab3.gif","link":"http://www.bustedtees.com/zeldaisthegirl"})
@@ -63,3 +63,5 @@ html
               span #{shirt.title}
       .footer
         a(href='http://peterwooley.com') &infin;
+  script(src='//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js')
+  script(src='js/index.js')
