--- a/index.jade
+++ b/index.jade
@@ -29,30 +29,30 @@ html
       - shirts.push({"title":"Node.js Turtle","image":"http://mmt.asciidisco.com/img/node_turtle.png","link":"http://teespring.com/nodejs"})
       - shirts.push({"title":"Helvetica","image":"http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg","link":"http://www.bustedtees.com/helvetica"})
       - shirts.push({"title":"Binary Dad ","image":"http://a.tgcdn.net/images/products/frontsquare/dad.jpg","link":"http://www.thinkgeek.com/product/6c49/"})
-      - shirts.push({"title":"Green Linen Shirt ","image":"http://www.jinx.com/content/prod/791p_19c_1b.jpg","link":"http://www.jinx.com/p/world_of_warcraft_green_linen_shirt_t_shirt.html"})
-      - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5"})
       - shirts.push({"title":"Aperture 40s","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c3_aperture_1940.jpg","link":"http://www.thinkgeek.com/product/e8c3/"})
+      - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html"})
+      - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5"})
       - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/"})
       - shirts.push({"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/"})
       - shirts.push({"title":"Bazinga","image":"http://a.tgcdn.net/images/products/additional/carousel/e5a4_bazinga_hoodie.jpg","link":"http://www.thinkgeek.com/product/d18d/"})
-      - shirts.push({"title":"Hearthstone","image":"http://www.jinx.com/content/prod/846p_0c_1b.jpg","link":"http://www.jinx.com/p/world_of_warcraft_home_is_where_the_hearthstone_is_t_shirt.html"})
-      - shirts.push({"title":"HJKL","image":"http://teespring.com/uploads/2175/shirtFront.jpg","link":"http://teespring.com/hjkl"})
+      - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
+      - shirts.push({"title":"Keep Calm","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Keep_Calm_Carry_On_NEW_T_SHIRT_red.jpg","link":"http://6dollarshirts.com/t-shirts/Keep-Calm-and-Carry-On-p-11405.html"})
+      - shirts.push({"title":"Zelda is the Girl","image":"http://5.media.bustedtees.cvcdn.com/7/-/bustedtees.5444a467-03ff-48c2-b752-41b9dab3.gif","link":"http://www.bustedtees.com/zeldaisthegirl"})
       - shirts.push({"title":"Triforce","image":"http://ak1.polyvoreimg.com/cgi/img-thing/size/l/tid/61371335.jpg","link":"http://www.polyvore.com/nintendo_legend_zelda_ocarina_time/thing?id=61371335"})
-      - shirts.push({"title":"Black Mesa","image":"http://www.jinx.com/content/prod/3160p_0c_1b.jpg","link":"http://www.jinx.com/p/half_life_2_black_mesa_premium_tee.html"})
-      - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html"})
+      - shirts.push({"title":"8-Bit Life","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/8_Bit_Life_Hearts_T_SHIRTS_black.jpg","link":"http://6dollarshirts.com/product.php?productid=12201"})
+      - shirts.push({"title":"Tunic for Heroes","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Format_NEW_Heros_Tunic_kellygreen.jpg","link":"http://6dollarshirts.com/t-shirts/A-Tunic-For-Heroes-p-11433.html"})
       - shirts.push({"title":"Node.js Logo","image":"http://ih3.redbubble.net/image.10435364.0663/fc,550x550,army.jpg","link":"http://www.redbubble.com/people/dmitrybaranovsk/works/7590663-node-js"})
       - shirts.push({"title":"RPSLS","image":"http://a.tgcdn.net/images/products/additional/carousel/db2e_lizard_spock.jpg","link":"http://www.thinkgeek.com/product/b597/"})
+      - shirts.push({"title":"HJKL","image":"http://teespring.com/uploads/2175/shirtFront.jpg","link":"http://teespring.com/hjkl"})
       - shirts.push({"title":"Linux Cheat Shirt","image":"http://a.tgcdn.net/images/products/zoom/dabb_linux_cheat.jpg","link":"http://www.thinkgeek.com/product/dabb/"})
-      - shirts.push({"title":"Zelda is the Girl","image":"http://5.media.bustedtees.cvcdn.com/7/-/bustedtees.5444a467-03ff-48c2-b752-41b9dab3.gif","link":"http://www.bustedtees.com/zeldaisthegirl"})
-      - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
       - shirts.push({"title":"Personal Soundtrack","image":"http://a.tgcdn.net/images/products/zoom/0a5b_personal_soundtrack_shirt.jpg","link":"http://www.thinkgeek.com/product/a5bf/"})
       - shirts.push({"title":"Compiling","image":"http://cdn.shopify.com/s/files/1/0149/3544/products/compiling_shirt_4_1024x1024.jpg?9081","link":"http://store.xkcd.com/products/compiling"})
       - shirts.push({"title":"Slide to Unlock","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/g2crpas9e6vg.png","link":"https://www.lolshirts.com/shirt/800f3668e8c/slide-to-unlock-t-shirt"})
-      - shirts.push({"title":"Exploded 4S","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/"})
+      - shirts.push({"title":"DZCFKWCRG","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Derek_Zoolander_Center_T_SHIRT_black.jpg","link":"http://6dollarshirts.com/t-shirts/Derek-Zoolander-Center-T-Shirt-p-12101.html"})
+      - shirts.push({"title":"Exploded iPhone","image":"http://www.teetrilogy.com/images/product/product-2.jpg","link":"http://www.teetrilogy.com/"})
       - shirts.push({"title":"Turret Schematic","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c5_aperture_turret.jpg","link":"http://www.thinkgeek.com/product/e8c5/"})
-      - shirts.push({"title":"Serif","image":"http://typographyshop.com/images/serifm_main.jpg","link":"http://typographyshop.com/serif_mens-t-shirt.html", "need":true})
-      - shirts.push({"title":"Sans Serif","image":"http://typographyshop.com/images/sans_men_lgdet.jpg","link":"http://typographyshop.com/sans-serif-mens-t-shirt.html", "need":true})
-      - shirts.push({"title":"A Book Apart","image":"http://cdn.shopify.com/s/files/1/0118/1012/products/abookapart-front_2048x2048.jpeg?835","link":"http://www.unitedpixelworkers.com/products/a-book-apart", "need":true})
+      - shirts.push({"title":"Black Mesa","image":"http://www.jinx.com/content/prod/3160p_0c_1b.jpg","link":"http://www.jinx.com/p/half_life_2_black_mesa_premium_tee.html"})
+      - shirts.push({"title":"NASA","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Nasa_T_SHIRT_royalheather.jpg","link":"http://6dollarshirts.com/t-shirts/NASA-p-11148.html"})
       - shirts.push({"title":"BSOD","image":"https://d378wrp175kvqb.cloudfront.net/tanga/image/fetch/c_fit,w_450,h_450/https://s3.amazonaws.com/tanga-images/zmjwb8ve34qx.png","link":"https://www.lolshirts.com/shirt/f0ab97a7b83/blue-screen-of-death-t-shirt"})
       ol.calendar
         each shirt in shirts
