--- a/css/index.styl
+++ b/css/index.styl
@@ -89,8 +89,11 @@ body
       border-radius: 4px
       height: 120px
 
-    &.past
-      opacity:.5
+    &.past span
+        background-color: #b6b6b6
+
+    &.me a
+        background-position: 0 -50px
 
     &.current a
       height:112px
