--- a/index.jade
+++ b/index.jade
@@ -35,14 +35,15 @@ html
         a(href='http://peterwooley.com')
           img.logo(src='images/wooooooooley.png')
     .container
+
       - var shirts = []
-      - shirts.push({"title":"Node.js Turtle","image":"http://mmt.asciidisco.com/img/node_turtle.png","link":"http://teespring.com/nodejs"})
-      - shirts.push({"title":"Helvetica","image":"http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg","link":"http://www.bustedtees.com/helvetica"})
-      - shirts.push({"title":"Binary Dad ","image":"http://a.tgcdn.net/images/products/frontsquare/dad.jpg","link":"http://www.thinkgeek.com/product/6c49/"})
-      - shirts.push({"title":"Aperture 40s","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c3_aperture_1940.jpg","link":"http://www.thinkgeek.com/product/e8c3/"})
-      - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html"})
-      - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5"})
-      - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/"})
+      - shirts.push({"title":"Node.js Turtle","image":"http://mmt.asciidisco.com/img/node_turtle.png","link":"http://teespring.com/nodejs", me: "https://pbs.twimg.com/media/BCKE94TCAAAO3j0.jpg:large"})
+      - shirts.push({"title":"Helvetica","image":"http://3.media.bustedtees.cvcdn.com/6/-/bustedtees.3c0f2216-da85-4c71-bfe2-0589fc6e.jpg","link":"http://www.bustedtees.com/helvetica", me: "https://pbs.twimg.com/media/BCKFlrxCIAAu3CO.jpg:large"})
+      - shirts.push({"title":"Binary Dad ","image":"http://a.tgcdn.net/images/products/frontsquare/dad.jpg","link":"http://www.thinkgeek.com/product/6c49/", me: "https://pbs.twimg.com/media/BCO-M1mCYAA7sWA.jpg:large"})
+      - shirts.push({"title":"Aperture 40s","image":"http://a.tgcdn.net/images/products/additional/carousel/e8c3_aperture_1940.jpg","link":"http://www.thinkgeek.com/product/e8c3/", me:"https://pbs.twimg.com/media/BCSpyRUCcAA38bA.jpg:large"})
+      - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html", me: "https://pbs.twimg.com/media/BCXaFowCEAAfifC.jpg:large"})
+      - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5", me:"https://pbs.twimg.com/media/BCde1TtCYAAGa0A.jpg:large"})
+      - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/", me: "https://pbs.twimg.com/media/BCjPJQICYAAfbLN.jpg:large"})
       - shirts.push({"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/"})
       - shirts.push({"title":"Bazinga","image":"http://a.tgcdn.net/images/products/additional/carousel/e5a4_bazinga_hoodie.jpg","link":"http://www.thinkgeek.com/product/d18d/"})
       - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
@@ -67,8 +68,10 @@ html
       ol.calendar
         each shirt in shirts
           - var need = shirt.need ? "need" : ""
-          li(class='#{need}')
-            a(href='#{shirt.link}', style='background-image:url(#{shirt.image})')
+          - var me = shirt.me ? "me" : ""
+          - var img = shirt.me ? shirt.me : shirt.image
+          li(class='#{need} #{me}')
+            a(href='#{shirt.link}', style='background-image:url(#{img})')
               span #{shirt.title}
       .footer
         a(href='http://peterwooley.com') &infin;
