--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,10 @@ body {
 .calendar li.current:before {
   border-top-right-radius: 8px;
 }
+.calendar li.current span {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 .calendar li.need a {
   border-color: #aaa;
 }
