--- a/css/index.styl
+++ b/css/index.styl
@@ -103,6 +103,10 @@ body
     &.current:before
       border-top-right-radius:8px
 
+    &.current span
+      border-bottom-left-radius: 4px
+      border-bottom-right-radius: 4px
+
     &.need a
       border-color: $need-border
 
