Added 8th photo of me.

--- a/index.jade
+++ b/index.jade
@@ -44,7 +44,7 @@ html
       - shirts.push({"title":"Aperture 80s","image":"http://www.jinx.com/content/prod/3163p_0c_1b.jpg","link":"http://www.jinx.com/p/portal_2_aperture_80s_logo_premium_tee.html", me: "https://pbs.twimg.com/media/BCXaFowCEAAfifC.jpg:large"})
       - shirts.push({"title":"HTML5 Dev Conf","image":"http://teespring.com/uploads/9662/shirtFront.jpg","link":"http://teespring.com/html5", me:"https://pbs.twimg.com/media/BCde1TtCYAAGa0A.jpg:large"})
       - shirts.push({"title":"Community 8-Bit","image":"http://a.tgcdn.net/images/products/additional/carousel/f264_community_8-bit.jpg","link":"http://www.thinkgeek.com/product/f264/", me: "https://pbs.twimg.com/media/BCjPJQICYAAfbLN.jpg:large"})
-      - shirts.push({"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/"})
+      - shirts.push({"title":"Planet Express","image":"http://a.tgcdn.net/images/products/frontsquare/bbc6_planet_express_2up.jpg","link":"http://www.thinkgeek.com/product/bbc6/", me: "https://pbs.twimg.com/media/BCnEUA3CcAAoTwH.jpg:large"})
       - shirts.push({"title":"Bazinga","image":"http://a.tgcdn.net/images/products/additional/carousel/e5a4_bazinga_hoodie.jpg","link":"http://www.thinkgeek.com/product/d18d/"})
       - shirts.push({"title":"8-Bit Mickey","image":"http://a0.img.mobypicture.com/a020ed02e886c759840634fc852f32a3_view.jpg","link":"http://www.laughingplacestore.com/Product-17332.asp?r=LP"})
       - shirts.push({"title":"Keep Calm","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Keep_Calm_Carry_On_NEW_T_SHIRT_red.jpg","link":"http://6dollarshirts.com/t-shirts/Keep-Calm-and-Carry-On-p-11405.html"})
