--- a/index.jade
+++ b/index.jade
@@ -53,8 +53,8 @@ html
       - shirts.push({"title":"Tunic for Heroes","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/Format_NEW_Heros_Tunic_kellygreen.jpg","link":"http://6dollarshirts.com/t-shirts/A-Tunic-For-Heroes-p-11433.html", me: "https://pbs.twimg.com/media/BDH9hrwCUAA67Fw.jpg:large"})
       - shirts.push({"title":"8-Bit Life","image":"http://6dollar.threadpitinc.netdna-cdn.com/images/P/8_Bit_Life_Hearts_T_SHIRTS_black.jpg","link":"http://6dollarshirts.com/product.php?productid=12201", me: "https://pbs.twimg.com/media/BDMU-4XCMAAxqEx.jpg:large"})
       - shirts.push({"title":"Node.js Logo","image":"http://ih3.redbubble.net/image.10435364.0663/fc,550x550,army.jpg","link":"http://www.redbubble.com/people/dmitrybaranovsk/works/7590663-node-js", me: "https://pbs.twimg.com/media/BDROsYsCYAIHlSx.jpg:large"})
-      - shirts.push({"title":"RPSLS","image":"http://a.tgcdn.net/images/products/additional/carousel/db2e_lizard_spock.jpg","link":"http://www.thinkgeek.com/product/b597/"})
-      - shirts.push({"title":"HJKL","image":"http://teespring.com/uploads/2175/shirtFront.jpg","link":"http://teespring.com/hjkl"})
+      - shirts.push({"title":"RPSLS","image":"http://a.tgcdn.net/images/products/additional/carousel/db2e_lizard_spock.jpg","link":"http://www.thinkgeek.com/product/b597/", me: "https://pbs.twimg.com/media/BDcx_AMCIAAK03d.jpg:large"})
+      - shirts.push({"title":"HJKL","image":"http://teespring.com/uploads/2175/shirtFront.jpg","link":"http://teespring.com/hjkl", me: "https://pbs.twimg.com/media/BDcyvmhCAAAal2s.jpg:large"})
       - shirts.push({"title":"Linux Cheat Shirt","image":"http://a.tgcdn.net/images/products/zoom/dabb_linux_cheat.jpg","link":"http://www.thinkgeek.com/product/dabb/"})
       - shirts.push({"title":"Personal Soundtrack","image":"http://a.tgcdn.net/images/products/zoom/0a5b_personal_soundtrack_shirt.jpg","link":"http://www.thinkgeek.com/product/a5bf/"})
       - shirts.push({"title":"Compiling","image":"http://cdn.shopify.com/s/files/1/0149/3544/products/compiling_shirt_4_1024x1024.jpg?9081","link":"http://store.xkcd.com/products/compiling"})
