Changed position of post-date pictures so they look better at most sizes (especially ~320px), though it looks a little worse in every size.

--- a/css/index.styl
+++ b/css/index.styl
@@ -93,7 +93,7 @@ body
         background-color: #b6b6b6
 
     &.me a
-        background-position: 0 -50px
+        background-position: 0 bottom
 
     &.current a
       height:112px
