--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ body {
   background-color: #b6b6b6;
 }
 .calendar li.me a {
-  background-position: 0 -50px;
+  background-position: 0 bottom;
 }
 .calendar li.current a {
   height: 112px;
